css/values.css
/*
===================================
===================================
Styles for an individual page

- Rename this file to match the page you are working on (e.g. home.css, about.css, etc.)
- Create a new file for your page and link this file to it in the <head> of your HTML document
- Variables from global.css will work in this CSS file as well. Do not add any variables to this file.
===================================
===================================
*/

/* need to add wrapper */
/* red background for bottom section needs fixing */
/* some text changes from white to black when in desktop mode */
/* blue background for support us needs fixing */
/* heart color and gap needed for support us */
/* white icons in support us need flexbox to move side by side in desktop mode */
/* align title text to center somehow hoping wrapper fixes some stuff */
html {
	/* does this need before and after */
	box-sizing: border-box;
}

/* 
===================================
Page Component Styles (icon grid, team member card)
===================================
*/
.hero {
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.hero img {
	width: 100%;
}
.values-card {
	min-height: 204px;
	color: var(--color-white);
	border: none;
	border-radius: 10px;
	display: flex;
	flex-direction: column;
	justify-content: center;
	text-align: center;
	margin: 0px 20px;
}
.text-container {
	padding: 0 20px 0 20px;
}
.values-card img {
	margin-bottom: 20px;
}
.values-card h2 {
	margin: 20px 0px 0px 0px;
	font-size: var(--font28);
	font-weight: var(--font-weight-bold);
	line-height: var(--line-height32);
}
.values-card p {
	display: flex;
	text-align: left;
	font-size: var(--font16);
	font-weight: var(--font-weight-regular);
	line-height: var(--line-height20);
	/* margin: var(--spacing20); */
}
/* Turns Our Values Title Black */
.values-head {
	display: flex;
	flex-direction: column;
	text-align: center;
	margin-bottom: 100px;
}

.h1-black {
	color: var(--color-onyx);
	margin: 60px 0 20px 0;
}

.values-head p {
	color: var(--color-onyx);
	margin: 0 20px 0;
}
/* Adds a background color in lieu of those rectangle shapes */
.copperback {
	background-color: var(--color-copper);
	display: flex;
	flex-direction: column;
	text-align: center;
}

/* Adds a background color in lieu of those rectangle shapes */

.onyxback {
	background-color: var(--color-onyx);
}

/* Adds a background color in lieu of those rectangle shapes */

.amaraback {
	background-color: var(--color-amaranth);
}

.sustainability-text,
.authenticity-text,
.education-text,
.tech-text {
	display: flex;
	flex-direction: column;
	border-radius: 10px;
}

.copperback,
.sustainability-text,
.grapeback,
.authenticity-text,
.education-text,
.tech-text {
	margin-bottom: 20px;
}

.sustainability-text {
	background-color: var(--color-onyx);
}
.authenticity-text {
	background-color: var(--color-amaranth);
}
.education-text {
	background-color: var(--color-yaleblue);
}
.tech-text {
	background-color: var(--color-teal);
}
/* Adds a background color in lieu of those rectangle shapes */
.grapeback {
	background-color: var(--color-cybergrape);
}
/* Adds a background color in lieu of those rectangle shapes */
.blueback {
	background-color: var(--color-yaleblue);
}
/* Adds a background color in lieu of those rectangle shapes */
.tealback {
	background-color: var(--color-teal);
}
/* Adds a background color in lieu of those rectangle shapes */
.support {
	background-color: var(--color-yaleblue);
	margin-top: 90px;
}
.support-header,
.support-text {
	margin: 0px 0px 0px 20px;
}
.support-header {
	display: flex;
	flex-direction: row;
	justify-content: left;
	font-size: var(--font28);
	font-weight: var(--font-weight-bold);
	line-height: var(--line-height32);
}
/* inline block allows the alignment with heart icon but doesn't fill desktop */
.support-header h4,
.support-header svg {
	margin: 90px 0px 20px 0px;
}
.support-text h2 {
	font-size: var(--font28);
	font-weight: var(--font-weight-bold);
	line-height: var(--line-height32);
	margin: 0;
}
.support-text p {
	font-size: var(--font21);
	font-weight: var(--font-weight-regular);
	line-height: var(--line-height26);
	margin: 20px 0px 0px 0px;
}
.support-logos {
	display: flex;
	flex-direction: column;
	padding-bottom: 80px;
}
.support-logo-01 {
	width: 82px;
	height: 69px;
	margin: 40px 0px 20px;
}
.support-logo-02 {
	width: 149px;
	height: 62px;
}
.empowering-text {
	display: flex;
	flex-direction: column;
	justify-content: center;
	text-align: center;
	margin-top: 60px;
}

/* Turns Title and Paragraph to Black */
.empowering h4 {
	font-size: var(--font28);
	font-weight: var(--font-weight-bold);
	line-height: var(--line-height32);
	color: var(--color-onyx);
	margin: 0;
}
.empowering p {
	text-align: left;
	color: var(--color-onyx);
	padding: 0px var(--spacing20);
	margin-bottom: 60px;
}
/* Adds Red Block behind this img - this changes in desktop version somehow */
.empowering-img-block {
	display: flex;
	flex-direction: column;
	justify-content: center;
	background-color: var(--color-amaranth);
}
.empowering-img-block img {
	margin: 30px;
}

/* ===================================
Section Styles (background, padding, etc.)
===================================
*/

/* 
===================================
Media Queries (overriding styles for different screen sizes)

Note: Here we are using a mobile-first approach, so we start with the smallest screen size and work our way up.
Start by writing styles for the mobile version of the design on the lines above.
Anything that needs to change for larger screens should be added to the media queries below.

Feel free to change the min/max-width values to whatever you need. Use variables.
===================================
*/

/* Tablet and Larger */
@media screen and (min-width: 768px) {
	/* Add styles that apply to table and desktop */
}
/* ... */

